# study_compiler

./: CMakeLists.txt  README.md  program.txt
EXCEPTION/: CMakeLists.txt  my_exception.cpp
EXCEPTION/include/: my_exception.hpp
general_type/include/: general_type.hpp
syntax_parser/: CMakeLists.txt  syntax_parser.cpp
syntax_parser/include/: syntax_parser.hpp
text_parser/: CmakeLists.txt  test.cpp  text_parser.cpp
text_parser/include/: text_parser.hpp
token/: CMakeLists.txt  base_attr.cpp  token.cpp
token/include/: base_attr.hpp  token.hpp
